--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,22 +1,20 @@
 /*
    SPACERS
 
-   There are eight levels of spacers (including $spacer-0)
-   Each level of spacer is twice as big as the last, starting from $spacer-1
-   $spacer-base represents the size of $spacer-4 and is considered 'medium' size
+   There are eight levels of spacers, including $spacer-0, which is level 0
+   $spacer-0 is always 0. After $spacer-1, every next spacer is twice the size of the last
+   Levels  1 through 7 therefore represent the product of $spacer-base with powers of two
+   $spacer-4 and is considered 'medium' size and is the product of $spacer-base and 2^0
  */
 
 // $spacer-4 is equal to $spacer-base and vice versa
-$spacer-base: 2rem;
+$spacer-base: 2rem !default;
 
-// $spacer-atom is 1/4 of $spacer-3 (2^0 / 2^3)
-$spacer-atom: $spacer-base / 8;
-
-$spacer-0: 0;             // Level 0: no space
-$spacer-1: $spacer-atom;  // Level 1: XXS
-$spacer-2: $spacer-1 * 2; // Level 2: XS
-$spacer-3: $spacer-2 * 2; // Level 3: S
-$spacer-4: $spacer-3 * 2; // Level 4: M (spacer-base)
-$spacer-5: $spacer-4 * 2; // Level 5: L
-$spacer-6: $spacer-5 * 2; // Level 6: XL
-$spacer-7: $spacer-6 * 2; // Level 7: XXL
+$spacer-0: 0;
+$spacer-1: $spacer-base * power-of-two(-3);
+$spacer-2: $spacer-base * power-of-two(-2);
+$spacer-3: $spacer-base * power-of-two(-1);
+$spacer-4: $spacer-base * power-of-two(0);
+$spacer-5: $spacer-base * power-of-two(1);
+$spacer-6: $spacer-base * power-of-two(2);
+$spacer-7: $spacer-base * power-of-two(3);
