--- a/scss/main-large.scss
+++ b/scss/main-large.scss
@@ -1,5 +1,5 @@
 @import '_main-mixin';
 
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 60em) and (max-width: 90em) {
   @include main(-l);
 }
