--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,13 +11,13 @@ $spacer-base: 2rem !default;
 
 $spacer-levels: (
   "0": 0,
-  "1": $spacer-base * power-of-two(-3),
-  "2": $spacer-base * power-of-two(-2),
-  "3": $spacer-base * power-of-two(-1),
-  "4": $spacer-base * power-of-two(0),
-  "5": $spacer-base * power-of-two(1),
-  "6": $spacer-base * power-of-two(2),
-  "7": $spacer-base * power-of-two(3)
+  "1": $spacer-base * nth-power-of-two(-3),
+  "2": $spacer-base * nth-power-of-two(-2),
+  "3": $spacer-base * nth-power-of-two(-1),
+  "4": $spacer-base,
+  "5": $spacer-base * nth-power-of-two(1),
+  "6": $spacer-base * nth-power-of-two(2),
+  "7": $spacer-base * nth-power-of-two(3)
 );
 
 /*
@@ -32,11 +32,11 @@ $sizer-base: 1rem !default;
 
 $sizer-levels: (
   "0":           0,
-  "1":           $sizer-base * power-of-two(0),
-  "2":           $sizer-base * power-of-two(1),
-  "3":           $sizer-base * power-of-two(2),
-  "4":           $sizer-base * power-of-two(3),
-  "5":           $sizer-base * power-of-two(4),
+  "1":           $sizer-base,
+  "2":           $sizer-base * nth-power-of-two(1),
+  "3":           $sizer-base * nth-power-of-two(2),
+  "4":           $sizer-base * nth-power-of-two(3),
+  "5":           $sizer-base * nth-power-of-two(4),
   "-10":         10%,
   "-20":         20%,
   "-30":         30%,
