Add CSS rules for float

--- a/scss/_main-mixin.scss
+++ b/scss/_main-mixin.scss
@@ -6,6 +6,7 @@
 @import '_height';
 @import '_position';
 @import '_display';
+@import '_float';
 @import '_miscellaneous';
 
 @mixin main($media-suffix) {
@@ -15,5 +16,6 @@
   @include height       ($media-suffix);
   @include position     ($media-suffix);
   @include display      ($media-suffix);
+  @include float        ($media-suffix);
   @include miscellaneous($media-suffix);
 }
