--- a/scss/_margin.scss
+++ b/scss/_margin.scss
@@ -5,27 +5,27 @@ $margin-spacer-levels: map-merge($spacer-levels, ("-auto": auto));
 
   // Margin all
   @each $level, $value in $margin-spacer-levels {
-    .m#{$level}#{$media-suffix} { padding: $value; };
+    .m#{$level}#{$media-suffix} { padding: $value; }
   }
 
   // Margin top
   @each $level, $value in $margin-spacer-levels {
-    .mt#{$level}#{$media-suffix} { padding-top: $value; };
+    .mt#{$level}#{$media-suffix} { padding-top: $value; }
   }
 
   // Margin right
   @each $level, $value in $margin-spacer-levels {
-    .mr#{$level}#{$media-suffix} { padding-right: $value; };
+    .mr#{$level}#{$media-suffix} { padding-right: $value; }
   }
 
   // Margin bottom
   @each $level, $value in $margin-spacer-levels {
-    .mb#{$level}#{$media-suffix} { padding-bottom: $value; };
+    .mb#{$level}#{$media-suffix} { padding-bottom: $value; }
   }
 
   // Margin left
   @each $level, $value in $margin-spacer-levels {
-    .ml#{$level}#{$media-suffix} { padding-left: $value; };
+    .ml#{$level}#{$media-suffix} { padding-left: $value; }
   }
 
   // Margin horizontal
@@ -33,7 +33,7 @@ $margin-spacer-levels: map-merge($spacer-levels, ("-auto": auto));
     .mh#{$level}#{$media-suffix} {
       padding-left: $value;
       padding-right: $value;
-    };
+    }
   }
 
   // Margin vertical
@@ -41,7 +41,7 @@ $margin-spacer-levels: map-merge($spacer-levels, ("-auto": auto));
     .mv#{$level}#{$media-suffix} {
       padding-top: $value;
       padding-bottom: $value;
-    };
+    }
   }
 
 }
