--- a/scss/main-all.scss
+++ b/scss/main-all.scss
@@ -1,5 +1,6 @@
 @import '_main-mixin';
 @import '_color';
+@import '_background-color';
 @import '_reset';
 @import '_font-family';
 @import '_box-sizing';
