--- a/scss/_main-mixin.scss
+++ b/scss/_main-mixin.scss
@@ -7,6 +7,7 @@
 @import '_position';
 @import '_display';
 @import '_float';
+@import '_border';
 @import '_miscellaneous';
 
 @mixin main($media-suffix) {
@@ -17,5 +18,6 @@
   @include position     ($media-suffix);
   @include display      ($media-suffix);
   @include float        ($media-suffix);
+  @include border       ($media-suffix);
   @include miscellaneous($media-suffix);
 }
