--- a/scss/main-all.scss
+++ b/scss/main-all.scss
@@ -1,6 +1,8 @@
 @import '_main-mixin';
 @import '_color';
+@import '_hover-color';
 @import '_background-color';
+@import '_hover-background-color';
 @import '_reset';
 @import '_font-family';
 @import '_box-sizing';
