Add CSS rules for border-color

--- a/scss/main-all.scss
+++ b/scss/main-all.scss
@@ -2,6 +2,7 @@
 @import '_color';
 @import '_hover-color';
 @import '_background-color';
+@import '_border-color';
 @import '_hover-background-color';
 @import '_reset';
 @import '_font-family';
