Add CSS rules for complex styles

--- a/scss/main-all.scss
+++ b/scss/main-all.scss
@@ -1,11 +1,20 @@
 @import '_main-mixin';
+
+@include main('');
+
+/*
+   The following imports are not responsive, i.e. they do not support
+   media specific suffixes (as opposed to the imports in _main-mixin.scss)
+
+ */
+@import '_reset';
 @import '_color';
 @import '_hover-color';
 @import '_background-color';
 @import '_border-color';
 @import '_hover-background-color';
-@import '_reset';
 @import '_font-family';
 @import '_box-sizing';
+@import '_complex';
 
-@include main('');
+
