--- a/scss/_border-radius.scss
+++ b/scss/_border-radius.scss
@@ -1,5 +1,5 @@
 @mixin border-radius($media-suffix) {
   @each $level, $value in $border-radius-levels {
-    .br#{$level} { border-radius: $value; }
+    .br#{$level}#{$media-suffix} { border-radius: $value; }
   }
 }
