Remove .button class, add button tag to reset

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -40,3 +40,9 @@ input[type="text"],
 input[type="url"] {
   box-sizing: border-box;
 }
+
+button {
+  font-size: inherit;
+  font-family: inherit;
+  cursor: pointer;
+}
