Add rule for displaying img as block in reset

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -45,3 +45,8 @@ button {
   font-size: inherit;
   font-family: inherit;
 }
+
+img {
+  // Prevent extra space at the bottom of `img` tags
+  display: block;
+}
