--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -1,15 +1,20 @@
-@function nth-power-of-two($exponent) {
+@function pow($number, $exponent) {
   $value: 1;
 
   @if $exponent > 0 {
     @for $_ from 1 through $exponent {
-      $value: $value * 2;
+      $value: $value * $number;
     }
-  } @else if $exponent < 0 {
+  }
+  @else if $exponent < 0 {
     @for $_ from 1 through -$exponent {
-      $value: $value / 2;
+      $value: $value / $number;
     }
   }
 
   @return $value;
+}
+
+@function nth-power-of-two($exponent) {
+  @return pow(2, $exponent);
 }
