Fix typo in line height for titles

--- a/scss/_line-height.scss
+++ b/scss/_line-height.scss
@@ -1,6 +1,6 @@
 @mixin line-height($media-suffix) {
 
-  .lh-header#{$media-suffix} { line-height: $line-height-headers; }
+  .lh-header#{$media-suffix} { line-height: $line-height-header; }
   .lh-text#{$media-suffix}   { line-height: $line-height-text; }
   .lh-extra#{$media-suffix}  { line-height: $line-height-extra; }
 
