--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -154,13 +154,15 @@ $border-radius-levels: (
 $font-size-base: 1em !default;
 $font-scaling-factor: 1.25 !default;
 
-$font-size-h1:    $font-size-base * pow($font-scaling-factor, 5);
-$font-size-h2:    $font-size-base * pow($font-scaling-factor, 4);
-$font-size-h3:    $font-size-base * pow($font-scaling-factor, 3);
-$font-size-h4:    $font-size-base * pow($font-scaling-factor, 2);
-$font-size-h5:    $font-size-base * pow($font-scaling-factor, 1);
-$font-size-h6:    $font-size-base;
-$font-size-small: $font-size-base * pow($font-scaling-factor, -1);
+$font-size-headline:    6rem !default;
+$font-size-subheadline: 5rem !default;
+$font-size-h1:          $font-size-base * pow($font-scaling-factor, 5);
+$font-size-h2:          $font-size-base * pow($font-scaling-factor, 4);
+$font-size-h3:          $font-size-base * pow($font-scaling-factor, 3);
+$font-size-h4:          $font-size-base * pow($font-scaling-factor, 2);
+$font-size-h5:          $font-size-base * pow($font-scaling-factor, 1);
+$font-size-h6:          $font-size-base;
+$font-size-small:       $font-size-base * pow($font-scaling-factor, -1);
 
 /*
    LINE HEIGHTS
@@ -169,3 +171,21 @@ $font-size-small: $font-size-base * pow($font-scaling-factor, -1);
 $line-height-header: 1.15 !default;
 $line-height-text:   1.5 !default;
 $line-height-extra:  2 !default;
+
+/*
+   FONT WEIGHTS
+ */
+
+$font-weight-levels: (
+  "-100":     100,
+  "-200":     200,
+  "-300":     300,
+  "-normal":  400, // font-weight 400 is normal
+  "-500":     500,
+  "-600":     600,
+  "-bold":    700, // font-weight 700 is bold
+  "-800":     800,
+  "-900":     900,
+  "-lighter": lighter,
+  "-bolder":  bolder
+);
