--- a/scss/main-huge.scss
+++ b/scss/main-huge.scss
@@ -1,5 +1,5 @@
-@import '_main-mixin';
+@import 'responsive-mixin';
 
 @media only screen and (min-width: 90em) {
-  @include main(-h);
+  @include responsive-mixin(-h);
 }
