--- a/scss/main-print.scss
+++ b/scss/main-print.scss
@@ -1,5 +1,5 @@
-@import '_main-mixin';
+@import 'responsive-mixin';
 
 @media only print {
-  @include main(-p);
+  @include responsive-mixin(-p);
 }
