Add CSS rules for font-style

--- a/scss/main-all.scss
+++ b/scss/main-all.scss
@@ -16,5 +16,6 @@
 @import 'modules/hover-background-color';
 @import 'modules/border-color';
 @import 'modules/font-family';
+@import 'modules/font-style';
 @import 'modules/box-sizing';
 @import 'modules/cursor';
