Add CSS rules for text-decoration

--- a/scss/main-all.scss
+++ b/scss/main-all.scss
@@ -17,5 +17,6 @@
 @import 'modules/border-color';
 @import 'modules/font-family';
 @import 'modules/font-style';
+@import 'modules/text-decoration';
 @import 'modules/box-sizing';
 @import 'modules/cursor';
