Add CSS rules for text-transform

--- a/scss/main-all.scss
+++ b/scss/main-all.scss
@@ -18,5 +18,6 @@
 @import 'modules/font-family';
 @import 'modules/font-style';
 @import 'modules/text-decoration';
+@import 'modules/text-transform';
 @import 'modules/box-sizing';
 @import 'modules/cursor';
